[package]
name = "hard-disks"
version = "0.1.0"
edition = "2021"
default-run = "hard-disks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draw = "0.3.0"
rand = "0.8.5"

[[bin]]
name = "plot-conf"
path = "src/bin/plot-conf.rs"

[[bin]]
name = "hard-disks"
path = "src/hard-disks.rs"
